# fastapi_demo

./: .editorconfig  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
docker/: README.md
docker/development/: Dockerfile  entrypoint.sh
momo/: asgi.py  main.py
momo/books/: endpoints.py
tests/: conftest.py  test_momo.py
